#53405, prevent accidental checkbox/radiobutton clicks

--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -148,6 +148,7 @@ tr.odd .form-item, tr.even .form-item {
   font-weight: bold;
 }
 .form-item label.option {
+  display: inline;
   font-weight: normal;
 }
 .marker, .form-required {
