--- a/misc/drupal.css
+++ b/misc/drupal.css
@@ -674,3 +674,55 @@ html.js fieldset.collapsed legend a {
   display: block;
   padding: 1.5em 0 .5em;
 }
+
+/*
+** Formatting for administration page -- this should probably be its own file
+*/
+div.admin-panel {
+  margin: 0px 0px 0px 0px;
+  padding: 5px 5px 15px 5px;
+}
+
+div.admin-panel .description {
+  margin: 0px 0px 3px;
+  padding: 2px 0 3px 0;
+  font-weight: normal;
+  text-align: left;
+  color: #999;
+}
+
+div.admin-panel .body {
+  padding: 0 4px 2px 8px;
+  background-color: #f4f4f4;
+  line-height: 1.2em;
+}
+
+div.admin-panel .head {
+  background-color: #6699CC;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 14px;
+  margin: 0px 0px 0px 0px;
+  padding: 4px 4px 4px 8px;
+}
+
+div.admin {
+  padding-top: 15px;
+}
+
+div.admin .left {
+  float: left;
+  width: 47%;
+  margin-left: 1em;
+}
+div.admin .right {
+  float: right;
+  width: 47%;
+  margin-right: 1em;
+}
+
+div.admin .expert-link {
+  text-align: right;
+  margin-right: 1em;
+  padding-right: 4px;
+}
