--- a/themes/chameleon/common.css
+++ b/themes/chameleon/common.css
@@ -114,7 +114,7 @@ br {
 }
 
 /*
-** Common navigation links added on the admin/themes/settings page
+** Common navigation links added on the admin/build/themes/settings page
 */
 .navlinks {
   padding: 0em 0.5em 1.5em 0em;
