--- a/modules/user/user.css
+++ b/modules/user/user.css
@@ -19,3 +19,15 @@
 #user-login-form {
   text-align: center;
 }
+#user-admin-filter ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+}
+#user-admin-buttons {
+  float: left;
+  margin-left: 0.5em;
+  clear: right;
+}
+
