--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -257,6 +257,28 @@ html.js fieldset.collapsed legend a {
 }
 
 /*
+** Progressbar styles
+*/
+.progress {
+  font-weight: bold;
+}
+.progress .bar {
+  background: #fff url(../../misc/progress.gif);
+  border: 1px solid #00375a;
+  height: 1.5em;
+  margin-top: 0.2em;
+}
+.progress .filled {
+  background: #0072b9;
+  height: 1em;
+  border-bottom: 0.5em solid #004a73;
+  width: 0%;
+}
+.progress .percentage {
+  float: right;
+}
+
+/*
 ** Formatting for welcome page
 */
 #first-time strong {
