--- a/themes/bluemarine/style.css
+++ b/themes/bluemarine/style.css
@@ -328,6 +328,12 @@ table {
 .block-forum h3 {
   margin-bottom: .5em;
 }
+div.admin-panel h3 {
+  background-color: #69c;
+  color: #fff;
+  padding: 5px 8px 5px;
+  margin: 0;
+}
 .calendar a {
   text-decoration: none;
 }
