- Patch #80979 by stefan/ma3vrck: move colors from admin.css to themes.

--- a/themes/chameleon/marvin/style.css
+++ b/themes/chameleon/marvin/style.css
@@ -89,6 +89,13 @@ table {
 /*
 ** Administration page styles
 */
+div.admin-panel .description {
+  color: #999;
+}
+
+div.admin-panel .body {
+  background: #f4f4f4;
+}
 
 div.admin-panel h3 {
   background-color: #888;
