--- a/themes/bluemarine/style.css
+++ b/themes/bluemarine/style.css
@@ -328,6 +328,12 @@ table {
 .block-forum h3 {
   margin-bottom: .5em;
 }
+div.admin-panel .description {
+  color: #999;
+}
+div.admin-panel .body {
+  background: #f4f4f4;
+}
 div.admin-panel h3 {
   background-color: #69c;
   color: #fff;
