#65151 by m3avrck. theme_links() is now marked up as a list.

--- a/modules/menu/menu.css
+++ b/modules/menu/menu.css
@@ -32,3 +32,15 @@ li a.active {
 td.menu-disabled {
   background: #ccc;
 }
+ul.links {
+  margin: 0;
+  padding: 0;
+}
+ul.links.inline {
+  display: inline;
+}
+ul.links li {
+  display: inline;
+  list-style-type: none;
+  padding: 0 0.5em;
+}
