--- a/modules/node/node.css
+++ b/modules/node/node.css
@@ -24,6 +24,10 @@ td.revision-current {
   display: block;
   width: 95%;
 }
+.node-form .container-inline .form-text {
+  display: inline;
+  width: auto;
+}
 .node-form .standard {
   clear: both;
 }
