--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -32,9 +32,6 @@ thead th {
 .breadcrumb {
   padding-bottom: .5em
 }
-.container-inline div {
-  display: inline;
-}
 .error {
   color: #f00;
 }
@@ -150,6 +147,13 @@ dl.multiselect dt, dl.multiselect dd {
 dl.multiselect .form-item {
   height: 1.75em;
   margin: 0;
+}
+
+/*
+** Inline items (need to override above)
+*/
+.container-inline div, .container-inline label {
+  display: inline;
 }
 
 /*
