- Patch #81740 by merlinofchaos, webchick, moshe, neclimdul et al: added package support to the modules page.

--- a/modules/system/admin.css
+++ b/modules/system/admin.css
@@ -39,6 +39,12 @@ div.admin .expert-link {
   padding-right: 4px;
 }
 
+table.package {
+  width: 100%;
+}
+table.package .description {
+  width: 100%;
+}
 div.admin-dependencies, div.admin-required {
   font-size: 0.9em;
   color: #444;
