#91076: Fix overlapping autocomplete suggestion box

--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -217,6 +217,7 @@ ul.secondary a.active {
   position: absolute;
   border: 1px solid;
   overflow: hidden;
+  z-index: 100;
 }
 #autocomplete ul {
   margin: 0;
