#84961: Add 'select all' and range select feature to admin tables.

--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -325,3 +325,10 @@ html.js .resizable-textarea textarea {
   display: block;
   padding: 1.5em 0 .5em;
 }
+
+/*
+** To be used with tableselect.js
+*/
+tr.selected td {
+  background: #ffc;
+}
