- Patch #99245 by m3avrck: make consistent use of url() in CSS files.

--- a/themes/pushbutton/style.css
+++ b/themes/pushbutton/style.css
@@ -240,7 +240,7 @@ ul.links li {
 }
 #site-info {
   background-color: #bdd3ea;
-  background-image: url('header-c.png');
+  background-image: url(header-c.png);
   font-family: "Trebuchet MS", Geneva, Arial, Helvetica, SunSans-Regular, Verdana, sans-serif;
 }
 .site-name {
