--- a/modules/system/admin.css
+++ b/modules/system/admin.css
@@ -74,13 +74,13 @@ table.system-status-report th  {
   padding-bottom: 6px;
 }
 table.system-status-report tr.error th {
-  background-image: url('../../misc/watchdog-error.png');
+  background-image: url(../../misc/watchdog-error.png);
 }
 table.system-status-report tr.warning th {
-  background-image: url('../../misc/watchdog-warning.png');
+  background-image: url(../../misc/watchdog-warning.png);
 }
 table.system-status-report tr.ok th {
-  background-image: url('../../misc/watchdog-ok.png');
+  background-image: url(../../misc/watchdog-ok.png);
 }
 
 /**
