#92849: Simplify JS code for collapsed fieldsets, and fix cut-off content in wide fieldsets.

--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -329,6 +329,10 @@ html.js fieldset.collapsed legend a {
 html.js fieldset.collapsible legend a {
   display: block;
 }
+/* Avoid jumping around due to margins collapsing into collapsible fieldset border */
+html.js fieldset.collapsible .fieldset-wrapper {
+  overflow: auto;
+}
 
 /*
 ** Resizable text areas
