--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -81,7 +81,7 @@ tr.merge-down, tr.merge-down td, tr.merge-down th {
 tr.merge-up, tr.merge-up td, tr.merge-up th {
   border-top-width: 0 !important;
 }
-.form-item input.error, .form-item textarea.error {
+.form-item input.error, .form-item textarea.error, .form-item select.error {
   border: 2px solid red;
 }
 .form-item .description {
