- Patch #112605 by Steven: sticky table headers.

--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -390,3 +390,10 @@ html.js .resizable-textarea textarea {
 tr.selected td {
   background: #ffc;
 }
+
+/*
+** Floating header for tableheader.js
+*/
+thead div.sticky-header {
+  background: #fff;
+}
