#117018: Use Garland theme for installer/maintenance pages, and add task list in the sidebar. - Refactor partial-page handling for the maintenance page. It's an exotic quirk for update.php and belongs there.

--- a/modules/system/system.css
+++ b/modules/system/system.css
@@ -66,6 +66,9 @@ div.ok, tr.ok {
   padding: 0;
   list-style: disc;
 }
+ol.task-list li.active {
+  font-weight: bold;
+}
 .form-item {
   margin-top: 1em;
   margin-bottom: 1em;
